@@ -1,4 +1,4 @@
-.TH HDPARM 8 "August 2009" "Version 9.26"
+.TH HDPARM 8 "September 2009" "Version 9.27"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
