@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	9.26
-Entered-date:	2009-08-27
+Version:	9.27
+Entered-date:	2009-09-01
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.27 Fix compatibility with old IDE drivers; was broken for many versions now
 		v9.26 Fix old -i model-name bug; fixed --security-erase-enhanced; other fixes
 		v9.25 Limit --trim-sector-ranges-stdin to max_sectors_kb per TRIM command
 		v9.24 Fixed nasty malloc() bug in --trim-sector-ranges code
@@ -100,7 +101,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		112K hdparm-9.26.tar.gz
+		112K hdparm-9.27.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
